# ADOL-Walking

adol_com_state_est_module/: CMakeLists.txt  package.xml
adol_foot_step_generator/: CMakeLists.txt  package.xml
adol_foot_step_generator/include/adol_foot_step_generator/: adol_foot_step_generator.h  message_callback.h
adol_foot_step_generator/launch/: op3.launch  op3_eff_zmp.launch
adol_foot_step_generator/msg/: Step2D.msg  Step2DArray.msg
adol_foot_step_generator/src/: adol_foot_step_generator.cpp  main.cpp  message_callback.cpp
adol_op3_prev_walking_manager/: CMakeLists.txt  package.xml
adol_preview_walking_module/: CMakeLists.txt  package.xml
adol_preview_walking_module/include/adol_preview_walking_module/: adol_preview_walking.h  op3_preview_walking_module.h
adol_preview_walking_module/src/: adol_preview_walking.cpp  op3_preview_walking_module.cpp
adol_preview_walking_module_msgs/: CMakeLists.txt  package.xml
adol_preview_walking_module_msgs/msg/: StepTimeData.msg
adol_preview_walking_pattern_generator/: CMakeLists.txt  package.xml
adol_preview_walking_pattern_generator/include/adol_preview_walking_pattern_generator/: endpoint_calculator.h  online_endpoint_calculator.h  online_pelvis_xy_calculator.h  online_walking_pattern_generator.h  pelvis_xy_calculator.h  preview_gains_calculator.h  preview_walking_pattern_generator.h
adol_preview_walking_pattern_generator/src/: endpoint_calculator.cpp  online_endpoint_calculator.cpp  online_pelvis_xy_calculator.cpp  online_walking_pattern_generator.cpp  pelvis_xy_calculator.cpp  preview_gains_calculator.cpp  preview_walking_pattern_generator.cpp
adol_walking_test_manager/: CMakeLists.txt  package.xml
adol_walking_test_manager/config/: OP3.robot  dxl_init_OP3 copy.yaml  dxl_init_OP3.yaml  offset.yaml
adol_walking_test_manager/data/: ini_pose.yaml
adol_walking_test_manager/launch/: op3.launch  op3_simulation.launch
adol_walking_test_manager/src/: manager.cpp
adol_walking_tester/: CMakeLists.txt  package.xml
adol_walking_tester/src/: adol_walking_tester_terminal.cpp
