<?xml version="1.0"?>
<package>
  <name>adol_foot_step_generator</name>
  <version>0.0.0</version>
  <description>The adol_foot_step_generator package</description>

  <maintainer email="hs3927@nyu.edu">Jay Song</maintainer>

  <license>TODO</license>

  <author email="hs3927@nyu.edu">Jay Song</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>op3_preview_walking_module_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>alice_walking_module_msgs</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>op3_preview_walking_module_msgs</run_depend>


  <run_depend>message_runtime</run_depend>

</package>
