<?xml version="1.0"?>
<package format="2">
  <name>adol_preview_walking_module_msgs</name>
  <version>0.0.0</version>
  <description>The adol_preview_walking_module_msgs package</description>

  <maintainer email="hs3927@nyu.edu">Jay Song</maintainer>
  <author email="hs3927@nyu.edu">Jay Song</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
