<?xml version="1.0"?>
<package format="2">
  <name>adol_preview_walking_pattern_generator</name>
  <version>0.0.0</version>
  <description>The op3_preview_walking_pattern_generator package</description>

  <author email="hs3927@nyu.edu">Jay Song</author>
  <maintainer email="hs3927@nyu.edu">Jay Song</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
</package>
