<?xml version="1.0"?>
<package format="2">
  <name>adol_walking_tester</name>
  <version>0.0.0</version>
  <description>The adol_walking_tester package</description>

  <author email="hs3927@nyu.edu">Jay Song</author>
  <maintainer email="hs3927@nyu.edu">Jay Song</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>adol_foot_step_generator</depend>
  <depend>adol_preview_walking_module_msgs</depend>
  
  <export></export>
</package>
